# CSL

./: trace.csv
CSL/: CSLParser.py  CollapseVM.py  FieldBackend.py  collapse.py  plotter.py  vercel.json  visualizer.py
CausalSetProject/: causal_set_data.pkl  dimension_estimators.py  dimension_sampler.py  partial_collapse.py  partial_collapse_output.txt  spacetime_visualization.py
NOWCollapseDiagrams/: main.py
TrustPass_Phase1B/: MedPass_Demo.ipynb  README.md  pyproject.toml
TrustPass_Phase1B/llm/: guard.py
TrustPass_Phase1B/utils/: diff.py  embeddings.py
causal_diamond_50node./: causal_diamond_500node.py
causal_test/: README.md  pyproject.toml
causal_test/casual_collapse/: __init__.py  causal_relations.py  collapse.py  sprinkling.py  visualization.py
causal_test/causal_collapse.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
causal_test/examples/: kerr_example.py  schwarzschild_example.py
causal_test/tests/: test_sprinkling.py
collapse_csl/: __main__.py  collapse_trace.csv  collapse_trace_report.csv  config.csv  example_script.csl  setup.py  test_trace.py  visualization.py
collapse_entropy/: main.py
collapse_entropy_sim/: cnf_utils.py  entropy.py  main.py  restrictor.py
collapse_inference/: likelihood.py  main.py  model.py  run_chains.py  utils.py
collapse_language/: binary_encoder.py  collapse_interpreter.py  collapse_vm.py  collapse_vm_parser.py  main.py  phoneme_map.py  semantic_translator.py  test_language_core.py  visualizer.py
collapse_sim/: collapse_sim.py
collapse_tqft_sim/: collapse_tqft.py
cosmo_transfer/: kvals.npy  (+4 more)
(+101 files in other folders)
