[project]
name = "trustpass"
version = "0.1.0"
description = "TrustPass SDK for LLM guardrails and text processing"
authors = [{ name = "xAI" }]
requires-python = ">=3.8"
dependencies = [
    "ipython",
    "sentence-transformers"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
